[package]
name = "embassy_daq"
version = "0.1.0"
edition = "2021"


[dependencies]
# Change stm32f413rh to your chip name, if necessary.
embassy-stm32 = {  version = "0.1.0", git = "https://github.com/embassy-rs/embassy/", branch = "main" , features = [ "defmt", "stm32f413rh", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy/", branch = "main",  features = ["defmt"] }
embassy-executor = { version = "0.5.0",  git = "https://github.com/embassy-rs/embassy/", branch = "main", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0",  git = "https://github.com/embassy-rs/embassy/", branch = "main",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy/", branch = "main" ,   features = ["defmt"] }
embassy-net = {version = "0.4.0",  git = "https://github.com/embassy-rs/embassy/", branch = "main",features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "2.0.0"}
chrono = { version = "^0.4", default-features = false}

[profile.release]
debug = 2

